k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: happy-school-backend
  namespace: happy-school
  labels:
    app: happy-school-backend
spec:
  selector:
    app: happy-school-backend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      # NodePort: permite acceder al backend directamente desde fuera del cluster
      # URL: http://localhost:30000
      nodePort: 30000
  type: NodePort
